--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
 	dependencies {
 		classpath 'org.kohsuke:github-api:1.114'
+		// This is an awful hack since buildscript cant seem to find groovy-json
+		classpath 'org.codehaus.groovy:groovy-json:2.5.12'
 	}
 }
 
@@ -15,6 +17,13 @@ plugins {
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
+// Verify the buildscript's groovy runtime matches the groovy-json version
+if (GroovySystem.version != "2.5.12") {
+	throw new GradleException("Please update \"groovy-json\" in buildscript dependencies to \"${GroovySystem.version}\"!");
+}
+
+def json = new JsonSlurper()
+
 def ENV = System.getenv()
 
 class Globals {
@@ -27,6 +36,8 @@ class Globals {
 version = Globals.baseVersion + "+" + (ENV.GITHUB_RUN_NUMBER ? "" : "local-") + getBranch()
 logger.lifecycle("Building Fabric: " + version)
 
+
+import groovy.json.JsonSlurper
 import org.apache.commons.codec.digest.DigestUtils
 import net.fabricmc.fabric.impl.gradle.ValidateModuleTask
 import net.fabricmc.loom.task.RunClientTask
