--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ buildscript {
 	dependencies {
 		classpath 'org.kohsuke:github-api:1.114'
 		// This is an awful hack since buildscript cant seem to find groovy-json
-		classpath 'org.codehaus.groovy:groovy-json:2.5.12'
+		//classpath localGroovy()
+		//classpath 'org.codehaus.groovy:groovy-json:2.5.12'
 	}
 }
 
@@ -22,7 +23,8 @@ if (GroovySystem.version != "2.5.12") {
 	throw new GradleException("Please update \"groovy-json\" in buildscript dependencies to \"${GroovySystem.version}\"!");
 }
 
-def json = new JsonSlurper()
+// Apply auxiliary buildscripts
+apply from: "gradle/module-validation.gradle"
 
 def ENV = System.getenv()
 
@@ -36,10 +38,8 @@ class Globals {
 version = Globals.baseVersion + "+" + (ENV.GITHUB_RUN_NUMBER ? "" : "local-") + getBranch()
 logger.lifecycle("Building Fabric: " + version)
 
-
 import groovy.json.JsonSlurper
 import org.apache.commons.codec.digest.DigestUtils
-import net.fabricmc.fabric.impl.gradle.ValidateModuleTask
 import net.fabricmc.loom.task.RunClientTask
 import net.fabricmc.loom.task.RunServerTask
 
@@ -404,11 +404,3 @@ task checkVersion {
 github.mustRunAfter checkVersion
 publish.mustRunAfter checkVersion
 project.tasks.curseforge.mustRunAfter checkVersion
-
-// Module validation
-subprojects {
-	task validateModules(type: ValidateModuleTask)
-
-	// Hook it up to `check` task
-	project.tasks.check.dependsOn validateModules
-}
