--- a/gradle/module-validation.gradle
+++ b/gradle/module-validation.gradle
@@ -1,23 +1,35 @@
 import groovy.json.JsonSlurper
 
 /*
- * This buildscript does validation of each module's `fabric.mod.json` (FMJ).
+ * This buildscript contains tasks related to the validation of each module in fabric api.
  *
- *
+ * Right now this task verifies each Fabric API module has a module lifecycle specified.
+ * More functionality will probably be added in the future.
  */
 
-// Hook up the tasks
 subprojects {
+	// Create the task
 	task validateModules(type: ValidateModuleTask)
-
-	// Hook it up to `check` task
-	//project.tasks.check.dependsOn validateModules
 }
 
 /**
  * Verifies that each module has the required custom values for module lifecycle in it's FMJ.
+ *
+ * <p>Example:
+ * <pre>{@code
+ * "custom": {
+ *   "fabric-api:module-lifecycle": "stable"
+ * }
+ * }</pre>
  */
 class ValidateModuleTask extends DefaultTask {
+	ValidateModuleTask() {
+		group = "verification"
+
+		// Hook up validation to check task
+		project.tasks.check.dependsOn(this)
+	}
+
 	@TaskAction
 	void validate() {
 		def json = new JsonSlurper().parse(project.file("src/main/resources/fabric.mod.json") as File) as Map<String, Map<String, String>>;
@@ -41,4 +53,3 @@ class ValidateModuleTask extends DefaultTask {
 		}
 	}
 }
-
