--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ class Globals {
 	static def baseVersion = "0.29.3"
 	static def mcVersion = "20w51a"
 	static def yarnVersion = "+build.1"
-	static def loaderVersion = "0.10.5+build.213"
+	static def loaderVersion = "0.11.0"
 }
 
 version = Globals.baseVersion + "+" + (ENV.GITHUB_RUN_NUMBER ? "" : "local-") + getBranch()
