Add custom value denoting module lifecycles.  (#1253)
* Add custom value denoting module lifecycles.

* Make the module validation work.

My hand has been forced - we must use buildSrc since JsonSlurper is not available in main buildscript.

* Apply task to each project and dont cross projects

* A horrible hack

* Wait what

* It works now.

* Not needed

* Drop unneeded maven repo, cache map lookup

--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,10 @@ allprojects {
 	}
 }
 
+// Apply auxiliary buildscripts to submodules
+// This must be done after all plugins are applied to subprojects
+apply from: "gradle/module-validation.gradle"
+
 javadoc {
 	options {
 		source = "8"
