--- a/settings.gradle
+++ b/settings.gradle
@@ -53,3 +53,4 @@ include 'fabric-structure-api-v1'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
 include 'fabric-tool-attribute-api-v1'
+include 'fabric-transfer-api-v1'
