--- a/settings.gradle
+++ b/settings.gradle
@@ -49,6 +49,7 @@ include 'fabric-rendering-v1'
 include 'fabric-rendering-data-attachment-v1'
 include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
+include 'fabric-screen-api-v1'
 include 'fabric-screen-handler-api-v1'
 include 'fabric-structure-api-v1'
 include 'fabric-tag-extensions-v0'
