--- a/build.gradle
+++ b/build.gradle
@@ -302,10 +302,7 @@ void setupRepositories(RepositoryHandler repositories) {
 	if (ENV.MAVEN_URL) {
 		repositories.maven {
 			url ENV.MAVEN_URL
-			credentials {
-				username ENV.MAVEN_USERNAME
-				password ENV.MAVEN_PASSWORD
-			}
+			// TODO: revert before merge yes yes but it helps me publish it for use in MI
 		}
 	}
 }
