--- a/fabric-transfer-api-v1/build.gradle
+++ b/fabric-transfer-api-v1/build.gradle
@@ -5,4 +5,5 @@ moduleDependencies(project, [
 	'fabric-api-base',
 	'fabric-api-lookup-api-v1',
 	'fabric-lifecycle-events-v1',
+	'fabric-registry-sync-v0',
 ])
