Moves several things from Fabric API to Fabric Loader. The only things API handles now are translations and syncing.

--- a/fabric-config-api-v1/src/main/resources/fabric-config-api-v1.mixins.json
+++ b/fabric-config-api-v1/src/main/resources/fabric-config-api-v1.mixins.json
@@ -3,9 +3,11 @@
   "package": "net.fabricmc.fabric.mixin.config",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "MixinMinecraftServer"
+    "MixinMinecraftServer",
+    "MixinServerPlayNetworkHandler"
   ],
   "client": [
+    "MixinClientPlayNetworkHandler",
     "MixinServerInfo"
   ],
   "injectors": {
