Updates much of the networking code to be on login instead of on play.

--- a/fabric-config-api-v1/src/main/resources/fabric-config-api-v1.mixins.json
+++ b/fabric-config-api-v1/src/main/resources/fabric-config-api-v1.mixins.json
@@ -3,7 +3,9 @@
   "package": "net.fabricmc.fabric.mixin.config",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
+    "GameProfileAccessor",
     "MixinMinecraftServer",
+    "MixinServerLoginNetworkHandler",
     "MixinServerPlayNetworkHandler"
   ],
   "client": [
