Start upgrading to loom 0.6 Fix some of the gradle 7 deprecation warnings, there are more left in loom. Start looking at singing the jars
(cherry picked from commit c51facceab6d8f649c8be8a1723b8fb7db22fccc)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,3 +17,6 @@ jobs:
           CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GH_API_KEY }}
           MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          SIGNING_SERVER: ${{ secrets.SIGNING_SERVER }}
+          SIGNING_PGP_KEY: ${{ secrets.SIGNING_PGP_KEY }}
+          SIGNING_JAR_KEY: ${{ secrets.SIGNING_JAR_KEY }}
