--- a/fabric-dimensions-v1/build.gradle
+++ b/fabric-dimensions-v1/build.gradle
@@ -2,9 +2,9 @@ archivesBaseName = "fabric-dimensions-v1"
 version = getSubprojectVersion(project, "2.0.6")
 
 dependencies {
-	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
-	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
-	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
 
 moduleDependencies(project, [
