--- a/fabric-key-binding-api-v1/build.gradle
+++ b/fabric-key-binding-api-v1/build.gradle
@@ -2,7 +2,7 @@ archivesBaseName = "fabric-key-binding-api-v1"
 version = getSubprojectVersion(project, "1.0.4")
 
 dependencies {
-	testmodCompile project(path: ':fabric-api-base', configuration: 'dev')
-	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
-	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-api-base', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
