--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -2,7 +2,7 @@ archivesBaseName = "fabric-object-builder-api-v1"
 version = getSubprojectVersion(project, "1.9.4")
 
 dependencies {
-	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
 
 moduleDependencies(project, [
