Generate testmod run config on the root project.
(cherry picked from commit b95bf11cca9d005d3c67d28bc3eb8e768d13b24b)

--- a/build.gradle
+++ b/build.gradle
@@ -118,12 +118,14 @@ allprojects {
 		runs {
 			testmodClient {
 				client()
-				ideConfigGenerated false
+				ideConfigGenerated project.rootProject == project
+				name = "Testmod Client"
 				source sourceSets.testmod
 			}
 			testmodServer {
 				server()
-				ideConfigGenerated false
+				ideConfigGenerated project.rootProject == project
+				name = "Testmod Server"
 				source sourceSets.testmod
 			}
 		}
