--- a/fabric-item-api-v1/build.gradle
+++ b/fabric-item-api-v1/build.gradle
@@ -2,5 +2,8 @@ archivesBaseName = "fabric-item-api-v1"
 version = getSubprojectVersion(project, "1.2.1")
 
 moduleDependencies(project, [
-		'fabric-api-base'
+		'fabric-api-base',
+		'fabric-content-registries-v0',
+		'fabric-lifecycle-events-v1',
+		'fabric-resource-loader-v0'
 ])
