--- a/fabric-structure-api-v1/build.gradle
+++ b/fabric-structure-api-v1/build.gradle
@@ -1,7 +1,7 @@
 archivesBaseName = "fabric-structure-api-v1"
 version = getSubprojectVersion(project, "1.1.4")
 
-minecraft {
+loom {
 	accessWidener = file('src/main/resources/fabric-structure-api-v1.accesswidener')
 }
 
