Make resource conditions registry based and move fabric conditions to be accessible

--- a/fabric-conditional-resource-api-v1/build.gradle
+++ b/fabric-conditional-resource-api-v1/build.gradle
@@ -1,2 +1,6 @@
 archivesBaseName = "fabric-conditional-resource-api-v1"
 version = getSubprojectVersion(project, "1.0.0")
+
+moduleDependencies(project, [
+  "fabric-registry-sync-v0"
+])
