Clean up a few things

--- a/fabric-fluid-api-v1/build.gradle
+++ b/fabric-fluid-api-v1/build.gradle
@@ -1,2 +1,6 @@
 archivesBaseName = "fabric-fluid-api-v1"
 version = getSubprojectVersion(project, "1.0.0")
+
+moduleDependencies(project, [
+		'fabric-api-base'
+])
