--- a/build.gradle
+++ b/build.gradle
@@ -197,6 +197,14 @@ allprojects {
 			include "**/*.java"
 		}
 
+		if (project.rootProject != project) {
+			project.rootProject.dependencies {
+				api project(path: ":${project.name}", configuration: "dev")
+				include project(":${project.name}")
+				testmodImplementation project(":${project.name}").sourceSets.testmod.output
+			}
+		}
+
 		// Setup batched remap for testmod jars. Not really a supported api in loom so copy this at your own risk.
 		net.fabricmc.loom.configuration.RemapConfiguration.setupRemap(
 				project,
@@ -384,17 +392,6 @@ subprojects.each { remapJar.dependsOn("${it.path}:remapJar") }
 
 sourceSets {
 	testmod
-}
-
-dependencies {
-	afterEvaluate {
-		subprojects.each {
-			api project(path: ":${it.name}", configuration: "dev")
-			include project("${it.name}:")
-
-			testmodImplementation project("${it.name}:").sourceSets.testmod.output
-		}
-	}
 }
 
 curseforge {
