Update Dynamic Attribute Tool modifier application to fix #1353 (#1355)
* dynamic tool attributes v2, part 1

* move duck interface to impl package

* add licenses

* fix mixin build failure on a dedicated server

* remove unused shadow of getItem()

* add a simple user-context-based attribute tool to the test item suite

* add clarifying comments in DynamicAttributeTool jdoc regarding parameter reliability + extended docs on getDynamicModifiers for attribute freshing

* player -> user because context is not always a player

* add license to TestNullableItem

--- a/fabric-tool-attribute-api-v1/build.gradle
+++ b/fabric-tool-attribute-api-v1/build.gradle
@@ -1,9 +1,10 @@
 archivesBaseName = "fabric-tool-attribute-api-v1"
-version = getSubprojectVersion(project, "1.2.9")
+version = getSubprojectVersion(project, "1.2.10")
 
 dependencies {
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
 
 moduleDependencies(project, [
