Write to the trade map directly

--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 
 moduleDependencies(project, [
 		'fabric-api-base',
+		'fabric-resource-loader-v0',
+		'fabric-tag-extensions-v0',
 		'fabric-tool-attribute-api-v1'
 ])
 
