--- a/fabric-models-v0/build.gradle
+++ b/fabric-models-v0/build.gradle
@@ -6,6 +6,6 @@ moduleDependencies(project, [
 ])
 
 dependencies {
-	testmodCompile project(path: ':fabric-renderer-registries-v1', configuration: 'dev')
-	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-renderer-registries-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
