--- a/fabric-screen-handler-api-v1/build.gradle
+++ b/fabric-screen-handler-api-v1/build.gradle
@@ -6,7 +6,7 @@ minecraft {
 }
 
 dependencies {
-	testmodCompile(project(path: ':fabric-object-builder-api-v1', configuration: 'dev'))
+	testmodImplementation(project(path: ':fabric-object-builder-api-v1', configuration: 'dev'))
 	testmodRuntimeOnly(project(path: ':fabric-resource-loader-v0', configuration: 'dev'))
 }
 
