--- a/fabric-renderer-api-v1/build.gradle
+++ b/fabric-renderer-api-v1/build.gradle
@@ -6,9 +6,9 @@ moduleDependencies(project, [
 ])
 
 dependencies {
-	testmodCompile project(path: ':fabric-blockrenderlayer-v1', configuration: 'dev')
-	testmodCompile project(path: ':fabric-models-v0', configuration: 'dev')
-	testmodCompile project(path: ':fabric-networking-blockentity-v0', configuration: 'dev')
-	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
-	testmodCompile project(path: ':fabric-rendering-data-attachment-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-blockrenderlayer-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-models-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-networking-blockentity-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-rendering-data-attachment-v1', configuration: 'dev')
 }
