switched set of rgeistrykeys to set of biome instances

--- a/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
@@ -7,6 +7,7 @@
     "modification.BiomeEffectsAccessor",
     "modification.BiomeWeatherAccessor",
     "modification.BiomeWeatherAccessor",
+    "modification.DynamicRegistryManagerImplMixin",
     "modification.GenerationSettingsAccessor",
     "modification.RegistryOpsMixin",
     "modification.SpawnDensityAccessor",
