--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,9 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.34.8"
-	static def mcVersion = "1.17-pre1"
-	static def yarnVersion = "+build.1"
+	static def baseVersion = "0.34.9"
+	static def mcVersion = "1.17-rc1"
+	static def yarnVersion = "+build.5"
 	static def loaderVersion = "0.11.3"
 	static def preRelease = true
 }
