--- a/fabric-renderer-api-v1/build.gradle
+++ b/fabric-renderer-api-v1/build.gradle
@@ -10,5 +10,9 @@ dependencies {
 	testmodCompile project(path: ':fabric-models-v0', configuration: 'dev')
 	testmodCompile project(path: ':fabric-networking-blockentity-v0', configuration: 'dev')
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
+	testmodCompile project(path: ':fabric-renderer-indigo', configuration: 'dev')
 	testmodCompile project(path: ':fabric-rendering-data-attachment-v1', configuration: 'dev')
+	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodCompile project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
+	testmodCompile project(path: ':fabric-tool-attribute-api-v1', configuration: 'dev')
 }
