Fix biome testmod accessor mixin being clientside despite used by the server

--- a/fabric-biome-api-v1/src/testmod/resources/fabric-biome-testmod-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/testmod/resources/fabric-biome-testmod-api-v1.mixins.json
@@ -2,7 +2,7 @@
   "required": true,
   "package": "net.fabricmc.fabric.test.biome.mixin",
   "compatibilityLevel": "JAVA_16",
-  "client": [
+  "mixins": [
     "DecoratorsAccessor"
   ],
   "injectors": {
