--- a/settings.gradle
+++ b/settings.gradle
@@ -51,6 +51,7 @@ include 'fabric-rendering-fluids-v1'
 include 'fabric-resource-loader-v0'
 include 'fabric-screen-api-v1'
 include 'fabric-screen-handler-api-v1'
+include 'fabric-server-languages-v1'
 include 'fabric-structure-api-v1'
 include 'fabric-tag-extensions-v0'
 include 'fabric-textures-v0'
