--- a/fabric-tree-api-v1/build.gradle
+++ b/fabric-tree-api-v1/build.gradle
@@ -2,5 +2,7 @@ archivesBaseName = "fabric-tree-api-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 moduleDependencies(project, [
-		'fabric-api-base'
+		'fabric-api-base',
+		'fabric-object-builder-api-v1',
+		'fabric-biome-api-v1'
 ])
