--- a/fabric-transfer-api-v1/build.gradle
+++ b/fabric-transfer-api-v1/build.gradle
@@ -6,8 +6,12 @@ moduleDependencies(project, [
 	'fabric-api-lookup-api-v1',
 	'fabric-lifecycle-events-v1', // transitive dependency of API Lookup
 	'fabric-rendering-fluids-v1',
+	'fabric-textures-v0'
 ])
 
 dependencies {
 	testmodImplementation project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-tool-attribute-api-v1', configuration: 'dev')
 }
