Structure Pool Callback

--- a/fabric-structure-api-v1/build.gradle
+++ b/fabric-structure-api-v1/build.gradle
@@ -4,3 +4,6 @@ moduleDependencies(project, [
 		'fabric-lifecycle-events-v1',
 		'fabric-api-base'
 ])
+loom {
+	accessWidener = file('src/main/resources/fabric-structure-api-v1.accesswidener')
+}
