--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,11 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.36.0"
-	static def mcVersion = "1.17"
-	static def yarnVersion = "+build.6"
+	static def baseVersion = "0.36.1"
+	static def mcVersion = "1.17.1-rc2"
+	static def yarnVersion = "+build.1"
 	static def loaderVersion = "0.11.3"
-	static def preRelease = false
+	static def preRelease = true
 }
 
 version = Globals.baseVersion + "+" + (ENV.GITHUB_RUN_NUMBER ? "" : "local-") + getBranch()
