Working tag list registry

--- a/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
+++ b/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
@@ -5,8 +5,9 @@
   "mixins": [
     "AccessorFluidTags",
     "MixinObjectBuilder",
-    "MixinTagImpl",
-    "MixinTagBuilder"
+    "MixinRequiredTagListRegistry",
+    "MixinTagBuilder",
+    "MixinTagImpl"
   ],
   "injectors": {
     "defaultRequire": 1
