--- a/fabric-tag-extensions-v0/build.gradle
+++ b/fabric-tag-extensions-v0/build.gradle
@@ -5,3 +5,8 @@ moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-resource-loader-v0'
 ])
+
+dependencies {
+	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+}
