Don't use MAVEN_USERNAME if it's not specified

--- a/build.gradle
+++ b/build.gradle
@@ -311,9 +311,11 @@ void setupRepositories(RepositoryHandler repositories) {
 	if (ENV.MAVEN_URL) {
 		repositories.maven {
 			url ENV.MAVEN_URL
-			credentials {
-				username ENV.MAVEN_USERNAME
-				password ENV.MAVEN_PASSWORD
+			if (ENV.MAVEN_USERNAME) {
+				credentials {
+					username ENV.MAVEN_USERNAME
+					password ENV.MAVEN_PASSWORD
+				}
 			}
 		}
 	}
