Mining Level API, part 1

--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include 'fabric-keybindings-v0'
 include 'fabric-key-binding-api-v1'
 include 'fabric-lifecycle-events-v1'
 include 'fabric-loot-tables-v1'
+include 'fabric-mining-level-api-v1'
 include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
